$Id$

2018-11-13  Christian Franke  <franke@computer.org>

	dev_interface.cpp, dev_interface.h: Add default implementation for
	old version of scan_smart_devices().

2018-11-02  Oleksii Samorukov  <samm@os2.kiev.ua>

	os_darwin.cpp, os_freebsd.cpp: fix return value in error paths
	patch provided by rikard.falkeborn (github)

2018-11-02  Christian Franke  <franke@computer.org>

	json.cpp: Allow UTF-8 characters in strings.

	ataprint.cpp: Add JSON support for '-l defects'.
	Add numeric values to JSON 'interface_speed' info.
	Replace local 'le*_to_uint()' with 'sg_get_unaligned_le*()'.

	ataprint.cpp, ataprint.h: Remove request to send '-l defects' output.
	Remove 'pending_defects_info' flag.
	smartctl.cpp, smartctl.8.in: Add '-l defects' to '-x' output.

2018-10-25  Christian Franke  <franke@computer.org>

	json.cpp, json.h: Add 'pretty' print option.
	smartctl.cpp, smartctl.8.in: Add '--json=c' option to disable
	pretty-printing.

	ataprint.cpp, nvmeprint.cpp, smartctl.cpp: Use const references
	for json::ref function parameters.

	json.cpp, json.h: Clean up usage of 'int64_t' and 'long long'.
	Use PRI?64 instead of "ll?" in printf() format strings.
	This re-enables build on older versions of MinGW.

2018-10-23  Christian Franke  <franke@computer.org>

	json.cpp: Remove extra space after JSON key names.

	json.cpp, json.h: Remove return of self reference from operator=().

	json.cpp, json.h: Change handling of unsafe and 128-bit integers:
	Output as string 'KEY_s' and LE byte array 'KEY_le' if range exceeded
	or verbose mode enabled.
	smartctl.cpp, smartctl.8.in: Add '--json=v' option.

2018-10-17  Christian Franke  <franke@computer.org>

	os_win32/popen_win32.cpp, os_win32/popen.h: New popen()/pclose()
	for Windows.  Unlike MSVCRT _popen(), it does not open a new console.
	os_win32.cpp: Remove run_cmd(), use popen() instead.
	os_win32/daemon_win32.cpp, os_win32/daemon_win32.h: Remove
	daemon_spawn().
	smartd.cpp: Remove _WIN32 specific usage of daemon_spawn(),