@@ -2,6 +2,8 @@ $Id$
 
 2018-11-13  Christian Franke  <franke@computer.org>
 
+	os_linux.cpp: Drop device scan support for obsolete devfs.
+
 	dev_interface.cpp, dev_interface.h: Add default implementation for
 	old version of scan_smart_devices().
 
